--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
+		"start": "PORT=4000 node -r dotenv/config build",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -20,6 +21,7 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/postcss": "^4.0.17",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"autoprefixer": "^10.4.21",
@@ -40,6 +42,8 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"axios": "^1.8.2"
+		"@sveltejs/adapter-node": "^5.2.12",
+		"axios": "^1.8.2",
+		"dotenv": "^16.4.7"
 	}
 }
